--- a/uix-page-builder-custom/css/uix-page-builder.css
+++ b/uix-page-builder-custom/css/uix-page-builder.css
@@ -1486,6 +1486,13 @@ img.uix-pb-img,
 }
 	
 
+@media (max-width: 768px) {
+	.uix-pb-btn {
+		padding: .3em 1.2em !important;
+	}
+}
+
+
 	/*green*/
 .uix-pb-btn-green {
     border-color: #a2bf2f;
@@ -1829,6 +1836,24 @@ img.uix-pb-img,
     padding: 0 5em;
 }
 
+
+@media (max-width: 768px) {
+	.uix-pb-parallax-wrapper .uix-pb-parallax-table {
+		height: auto !important;
+	}
+	
+	.uix-pb-parallax-wrapper .uix-pb-parallax-table .uix-pb-parallax-content-box {
+		position: relative;
+		top: 0;
+		-webkit-transform: translateY(0);
+		-ms-transform: translateY(0);
+		transform: translateY(0);
+	}
+
+	.uix-pb-parallax-wrapper .uix-pb-parallax-table .uix-pb-parallax-content-box {
+		padding: 1.5em .2em;
+	}
+}
 
 /* ====================================================== 
    14. Client                           
