--- a/admin/uixpbform/css/uixpbform.css
+++ b/admin/uixpbform/css/uixpbform.css
@@ -1,6 +1,6 @@
 /*
 	* Plugin: Uix Page Builder Form
-	* Version 2.0
+	* Version 2.4
 	* Author: UIUX Lab
 	* Twitter: @uiux_lab
 	* Author URL: https://uiux.cc
@@ -2249,7 +2249,17 @@ a.uixpbform-icon-clear {
 	border: 1px solid #ccc;
 }
 
-
+.mce-branding-powered-by {
+	visibility: hidden;
+}
+.mce-toolbar-grp {
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f6f6f6+0,ffffff+100 */
+	background: #f6f6f6 !important; /* Old browsers */
+	background: -moz-linear-gradient(top, #f6f6f6 0%, #ffffff 100%) !important; /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, #f6f6f6 0%,#ffffff 100%) !important; /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, #f6f6f6 0%,#ffffff 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0 ) !important; /* IE6-9 */
+}
 
 /* Default
 --------------------------------------------------------------
