--- a/admin/assets/css/jquery.accTabs.css
+++ b/admin/assets/css/jquery.accTabs.css
@@ -49,6 +49,9 @@
 		border-right: 1px solid #E5E5E5;
 		border-top: 1px solid #E5E5E5;
 		font-weight: 400;
+		-webkit-box-shadow: 0px 1px 1px 0px #E5E5E5;
+		-moz-box-shadow: 0px 1px 1px 0px #E5E5E5;
+		box-shadow: 0px 1px 1px 0px #E5E5E5;
 	
 	}
 	
